# pylobid

./: .flake8  .gitignore  .travis.yml  404.html  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  index.html  input.txt  mkdocs.yml  objects.inv  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml  docs.yml  lint.yml  pypi.yml  test.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  pylobid.rst  reference.md  usage.rst
pylobid/: __init__.py  pylobid.py  utils.py  validators.py
reference/: index.html
src/pylobid/: __init__.py  pylobid.py  utils.py  validators.py
tests/: __init__.py  fixtures.py  test_pylobid.py  test_pylobid_validators.py
