[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[project]
name = "pylobid"
version = "3.0.0"
description = "A lobid-REST-API client"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Peter Andorfer", email = "p.andorfer@gmail.com" },
    { name = "Christian Lölkes", email = "christian.loelkes@gmail.com" },
]
requires-python = ">=3.8"
keywords = ["lobid"]
dependencies = [
    "jsonpath-ng>=1.7.0",
    "requests>=2.32.4",
]

[project.urls]
Repository = "https://github.com/csae8092/pylobid"
Documentation = "https://csae8092.github.io/pylobid/"

[tool.setuptools]
packages = ["pylobid",]

[dependency-groups]
dev = [
    "coverage>=7.6.1",
    "ipykernel>=6.29.5",
    "mkdocstrings[python]>=0.26.1",
    "pytest>=8.3.5",
    "ruff>=0.12.10",
]
